--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,7 @@
 .profile {
   border: 2px solid black;
-  width: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 300px;
+  margin: 0 auto;
 }
 
 .description {
@@ -15,6 +12,7 @@
   text-align: center;
   padding: 0;
   display: flex;
+  justify-content: space-evenly;
 }
 .label {
   color: brown;
